@@ -5,20 +5,20 @@ import static org.assertj.core.api.Assertions.assertThat;
 import io.javalin.Javalin;
 import io.javalin.json.JavalinJackson;
 import io.javalin.testtools.JavalinTest;
-import java.util.ArrayList;
+import java.util.List;
+
 import org.junit.jupiter.api.Test;
 
 public class D2E3Tests {
-  D2E3 d2e3 = new D2E3();
-  Javalin app = d2e3.javalinApp();
-  ArrayList<Alarm> alarms = d2e3.getAlarms();
+  Javalin app = D2E3.createApp();
+  List<Alarm> alarms = AlarmRepository.findAll();
 
   @Test
   public void GET_alarms_returns_all_alarms() {
     JavalinTest.test(
         app,
         (server, client) -> {
-          var alarmsJson = new JavalinJackson().toJsonString(alarms, ArrayList.class);
+          var alarmsJson = new JavalinJackson().toJsonString(alarms, List.class);
           var response = client.get("/alarms");
           assertThat(response.code()).isEqualTo(200);
           assertThat(response.body().string()).isEqualTo(alarmsJson);
@@ -30,9 +30,9 @@ public class D2E3Tests {
     JavalinTest.test(
         app,
         (server, client) -> {
-          var index = 0;
-          var alarmJson = new JavalinJackson().toJsonString(alarms.get(index), Alarm.class);
-          var response = client.get("/alarms/" + Integer.toString(index));
+          var id = 0;
+          var alarmJson = new JavalinJackson().toJsonString(AlarmRepository.findById(id), Alarm.class);
+          var response = client.get("/alarms/" + Integer.toString(id));
           assertThat(response.code()).isEqualTo(200);
           assertThat(response.body().string()).isEqualTo(alarmJson);
         });
@@ -46,10 +46,11 @@ public class D2E3Tests {
           var alarm = new Alarm("13:37", "Have lunch");
           var alarmJson = new JavalinJackson().toJsonString(alarm, Alarm.class);
           var response = client.post("/alarms", alarm);
-
           assertThat(response.code()).isEqualTo(201);
           assertThat(response.body().string()).isEqualTo(alarmJson);
-          assertThat(alarms.getLast()).usingRecursiveComparison().isEqualTo(alarm);
+
+          alarms = AlarmRepository.findAll();
+          assertThat(alarms.get(alarms.size() - 1)).isEqualTo(alarm);
         });
   }
 }
